_sass/_pages/_index.scss
section.index-hero {
  background: url(../images/index_hero_tiny.jpg) no-repeat 63% center;
  background-size: cover;

  height: calc(92vh - #{$navbar-height});
  padding: 30px 0;

  & > div {
    height: 100%;
    position: relative;
  }
}

.index-hero-heading {
  position: absolute;
  bottom: $navbar-height;

  color: white;
  margin: 0;

  h1 {
    margin: 0;
    font-weight: bold;
    font-size: 64px;
    color: white;
  }

  h2 {
    text-transform: uppercase;
    font-size: 34px;
    font-weight: 300;
    line-height: 50px;
    margin-top: 0;
    max-width: 580px;
    color: white;
  }

  @media screen and (max-width: $screen-xs-max) {
    bottom: $navbar-height / 2;

    h1 {
      font-size: 34px;
    }

    h2 {
      font-size: 18px;
      line-height: 30px;
      max-width: 400px;
    }
  }
}

section.main-audience {
  padding: 40px 0;

  p {
    color: $dark-p-color;
    width: 75%;
    margin: 0 auto;
    font-weight:bold;
    max-width: 300px;
  }

  p, h2 {
    transition: color 0.2s linear;
  }

  .icon-container {
    height: 190px;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  img {
    height: 130px;
  }

  a.main-audience-link {
    &:hover {
      text-decoration: none;
      color: lighten($primary-color, 5%);
      p, h2 {
        color: inherit;
      }
    }
  }
}

section.what-is-iaeste {
  padding: 30px 0;
  background: $section-background-color;

  h1 {
    margin-bottom: 50px;
  }

  h3 {
    position: relative;
  }

  .logo-container img {
      width: 80%;
      filter: brightness(25%);
      @media screen and (max-width: $screen-xs-max) {
        max-height: 175px;
        width: auto;
      }
  }

  @media screen and (max-width: $screen-xs-max) {
    & .text-right, & .text-left {
      text-align: center;
    }
  }
}

section.statistics {
  background: $primary-color;
  color: white;
  font-weight: bold;
  font-size: 20px;
  position: relative;
  text-align: center;

  .container {
    display: flex;
    align-items: center;
    height: 80px;
  }

  .statistic-container {
    flex-grow: 1;
  }

  p {
    display: inline-block;
  }

  img {
    filter: brightness(1000%);
    height: 40px;
    margin-right: 20px;
  }
}

section.travel-reviews {
  background: url(../images/guy_at_river_tiny.jpg) no-repeat 0% center;
  background-size: cover;

  h2 {
    word-wrap: break-word;
  }
}

section.employer-information {
  background: $section-background-color;
}

section.horizontal-ruler {
  position: relative;
  hr {
    // border-width: 2px;
    border-color: $primary-color;
  }

  span {
    color: $primary-color;
    position: absolute;
    font-weight: 400;
    font-size: 14px;
    top: 50%;
    left: 50%;
    background: white;
    padding: 0 40px;
    @include translate(-50%, -50%);
  }
}

.supporters .supporter-logo {
  max-width: 80%;
  max-height: 100px;
  margin: 20px 0 35px 0;
}

